[package]
name = "libmyrtle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.21.5", default-features = false }

[dependencies.nom]
version = "7.1.3"
default-features = false
features = ["alloc"]
