[package]
name = "myrtle_rp2040"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmyrtle = { path = "../libmyrtle" }
cortex-m-rt = "0.7.3"
critical-section = "1.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
defmt = "0.3.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3" }

embedded-alloc = "0.5.0"
embedded-hal = { version = "0.2.7" }
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.8.0"

[profile.release]
codegen-units = 1
debug = 2
strip = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

