[package]
name = "myrtle_rp2040"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmyrtle = { path = "../libmyrtle" }
cortex-m-rt = "0.7.3"
critical-section = "1.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}

embedded-alloc = "0.5.0"
rp2040-boot2 = "0.2.1"
rp2040-pac = { version = "0.5.0"}