[package]
name = "myrtle_testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmyrtle = { path = "../libmyrtle" }
liblink = { path = "../liblink" }
ringbuffer = "0.13.0"
egui = "0.21.0"
eframe = "0.21.3"
